# quietshelf

./: .dockerignore  .env.example  .env.jetson.example  .gitignore  Dockerfile  How Quiet Shelf works.txt  LICENSE  README.md  SKILL.md  STATUS.md  Start Quiet Shelf.bat  docker-compose.jetson.yml  docker-compose.yml  jetson-setup.sh  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  config.py  deps.py  http_errors.py  ingest.py  main.py  mapping.py  models.py  prompt.py  providers.py  ratelimit.py
app/providers/: __init__.py  base.py  gemini.py  groq.py  json_engine.py  ollama.py  openrouter.py  pacing.py  registry.py
beta-testing/narrative-pin-board-&-story-analyst (2)/: README.md  metadata.json  package-lock.json  package.json  server.ts
frontend/: _adherence.oxlintrc.json  _ds_manifest.json  readme.md
frontend/06212026-ui-changes/: SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md
frontend/guidelines/: brand-voice.html  (+6 more)
qfc/: __init__.py  __main__.py
samples/: Steady_Ground_PRINT_FINAL conv (1).rtf  Steady_Ground_PRINT_FINAL conv.docx  excerpt.txt  fiction_excerpt.txt  fiction_map.json  imagined_seed.json  map.json
static/: _ds_bundle.js  about.jsx  api.js  app.jsx  blurb.jsx  engine.js  format.jsx  home.jsx  index.html  kit.css  promote.jsx  screens.jsx  storymap.jsx  styles.css  ui.jsx
tests/: conftest.py  test_blurb.py  test_cli.py  test_format.py  test_grounding.py  test_infra.py  test_json_engine.py  test_pacing.py  test_parsing.py  test_promote.py  test_providers.py  test_storymap.py  test_validation.py
(+108 files in other folders)
